--- a/app/src/main/res/layout/menu_yonlendirme_cekmecesi.xml
+++ b/app/src/main/res/layout/menu_yonlendirme_cekmecesi.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_margin="16dp"
-        android:onClick="Accontatiklama"
+        android:onClick="Accountclick"
         android:src="@drawable/baseline_account_box_24" />
 
     <View
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:onClick="HomePageclick"
+        android:onClick="HomePageklick"
         android:orientation="horizontal">
 
         <TextView
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:onClick="Terminclick"
+        android:onClick="ChatClick"
         android:orientation="horizontal">
 
         <TextView
