--- a/app/src/main/res/layout/menu_nawigation_drawer.xml
+++ b/app/src/main/res/layout/menu_nawigation_drawer.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_margin="16dp"
-        android:onClick="Accountclick"
+        android:onClick="AccountClick"
         android:src="@drawable/baseline_account_box_24" />
 
     <View
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:onClick="HomePageklick"
+        android:onClick="HomePageClick"
         android:orientation="horizontal">
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
-            android:text="Hompe Page"
+            android:text="@string/home_page"
             android:textSize="20sp" />
 
         <ImageView
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:onClick="Überunsclick"
+        android:onClick="AboutUsClick"
         android:orientation="horizontal">
 
         <TextView
@@ -79,7 +79,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
-            android:text="Über uns"
+            android:text="@string/about_us"
             android:textSize="20sp" />
 
         <ImageView
@@ -95,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:onClick="Mapesclick"
+        android:onClick="MapsClick"
         android:orientation="horizontal">
 
         <TextView
@@ -119,7 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:onClick="exitclick"
+        android:onClick="ExitClick"
         android:orientation="horizontal">
 
         <TextView
@@ -128,7 +128,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
-            android:text="Exit"
+            android:text="@string/exit"
             android:textSize="20sp" />
 
         <ImageView
