--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -16,7 +16,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="ElavateU"
+        android:text="@string/elevateu"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/blue"
