--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="MenuyeTiklama"
+        android:onClick="MenuClick"
         android:src="@drawable/baseline_menu_24"/>
     <TextView
         android:layout_width="0dp"
