--- a/app/src/main/res/layout/menu_nawigation_drawer.xml
+++ b/app/src/main/res/layout/menu_nawigation_drawer.xml
@@ -7,10 +7,10 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="200dp"
         android:layout_margin="16dp"
-        android:onClick="AccountClick"
-        android:src="@drawable/baseline_account_box_24" />
+        android:onClick="LogoClick"
+        android:src="@drawable/eu_app_logo" />
 
     <View
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
-            android:text="@string/home_page"
+            android:text="Home Page"
             android:textSize="20sp" />
 
         <ImageView
@@ -39,6 +39,30 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:src="@drawable/baseline_dashboard_24" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:onClick="AccountClick"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:text="Account"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/baseline_account_box_24" />
 
     </LinearLayout>
 
@@ -80,7 +104,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
-            android:text="@string/about_us"
+            android:text="About Us"
             android:textSize="20sp" />
 
         <ImageView
@@ -129,7 +153,7 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:padding="12dp"
-            android:text="@string/exit"
+            android:text="Exit"
             android:textSize="20sp" />
 
         <ImageView
@@ -140,11 +164,6 @@
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center_horizontal"
-        app:srcCompat="@drawable/eu_app_logo" />
+
 
 </LinearLayout>
