--- a/app/src/main/res/layout/activity_loginscreen.xml
+++ b/app/src/main/res/layout/activity_loginscreen.xml
@@ -10,67 +10,67 @@
     android:padding="16dp"
     tools:context=".LoginscreenActivity">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical">
-
-    <ImageButton
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:src="@drawable/eu_app_logo_login" />
-
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:hint="Email"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="20sp"
-        android:background="@drawable/rounded_corner"
-        android:padding="18dp"
-        android:inputType="textEmailAddress"
-        android:id="@+id/edit_email"/>
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="170dp"
+            android:layout_height="170dp"
+            android:src="@drawable/eu_app_logo_login" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:hint="Email"
+            android:textColor="@color/darkred"
+            android:textColorHint="@color/black"
+            android:textSize="20sp"
+            android:background="@drawable/rounded_corner"
+            android:padding="18dp"
+            android:inputType="textEmailAddress"
+            android:id="@+id/edit_email"/>
 
 
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="Password"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="20sp"
-        android:background="@drawable/rounded_corner"
-        android:padding="18dp"
-        android:inputType="textPassword"
-        android:id="@+id/edit_password"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:hint="Password"
+            android:textColor="@color/darkred"
+            android:textColorHint="@color/black"
+            android:textSize="20sp"
+            android:background="@drawable/rounded_corner"
+            android:padding="18dp"
+            android:inputType="textPassword"
+            android:id="@+id/edit_password"/>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/white"
-        android:padding="18dp"
-        android:layout_marginTop="32dp"
-        android:textSize="20dp"
-        android:id="@+id/login_btn"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
+            android:padding="18dp"
+            android:layout_marginTop="32dp"
+            android:textSize="20dp"
+            android:id="@+id/login_btn"/>
 
-    <TextView
-        android:id="@+id/no_account"
-        android:layout_marginTop="16dp"
-        android:text="I do not have an account"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:textSize="15sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/no_account"
+            android:layout_marginTop="16dp"
+            android:text="I do not have an account"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
 
 
-</LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
