--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -12,14 +12,15 @@
         android:layout_height="wrap_content"
         android:onClick="MenuClick"
         android:src="@drawable/baseline_menu_24"/>
+
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/elevateu"
+        android:text="ElevateU"
         android:textAlignment="center"
-        android:textStyle="bold"
         android:textColor="@color/blue"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
