--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:orientation="vertical">
 
         <include
@@ -18,14 +17,49 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="HomePage"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome"
             android:gravity="center"
-            android:textSize="50sp"
-            android:textStyle="bold"/>
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:padding="16dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/description_homepage"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:padding="16dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:layout_margin="16dp">
+
+            <Button
+                android:id="@+id/surgical_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/surgical_procedures"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+
+            <Button
+                android:id="@+id/non_surgical_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/non_surgical_procedures"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+
+        </LinearLayout>
 
     </LinearLayout>
-
 
     <RelativeLayout
         android:layout_width="300dp"
@@ -33,13 +67,7 @@
         android:background="@android:color/white"
         android:layout_gravity="start">
 
-        <include
-            layout="@layout/menu_nawigation_drawer"/>
-
 
     </RelativeLayout>
-
-
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
