--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <color name="green">#4CAF50</color>
     <color name="pink">#D56E91</color>
     <color name="darkred">#80130B</color>
+    <color name="darkpink">#D11756</color>
+    <color name="lila2">#A37CE8</color>
 
 
 </resources>
