--- a/app/src/main/res/drawable/login_background.xml
+++ b/app/src/main/res/drawable/login_background.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient android:type="linear" android:angle="135"
-       android:startColor="@color/black" android:endColor="@color/white"/>
+       android:startColor="@color/pink" android:endColor="@color/white"/>
 </shape>
