--- a/app/src/main/res/layout/activity_loginscreen.xml
+++ b/app/src/main/res/layout/activity_loginscreen.xml
@@ -25,8 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:hint="Email"
-            android:textColor="@color/darkred"
+            android:hint="@string/email"
+            android:textColor="@color/lila2"
             android:textColorHint="@color/black"
             android:textSize="20sp"
             android:background="@drawable/rounded_corner"
@@ -40,8 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Password"
-            android:textColor="@color/darkred"
+            android:hint="@string/password"
+            android:textColor="@color/lila2"
             android:textColorHint="@color/black"
             android:textSize="20sp"
             android:background="@drawable/rounded_corner"
@@ -52,7 +52,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="@string/login"
             android:backgroundTint="@color/black"
             android:textColor="@color/white"
             android:padding="18dp"
@@ -63,7 +63,7 @@
         <TextView
             android:id="@+id/no_account"
             android:layout_marginTop="16dp"
-            android:text="I do not have an account"
+            android:text="@string/no_account"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="15sp"
