--- a/app/src/main/res/layout/activity_non_surgical_procedures_descriptions.xml
+++ b/app/src/main/res/layout/activity_non_surgical_procedures_descriptions.xml
@@ -6,52 +6,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SurgicalProceduresDescriptions">
-    
-    
+    tools:context=".NonSurgicalProceduresDescriptions">
+
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
+        android:id="@+id/tabLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#A37CE8"
         app:tabIndicatorColor="#FFFFFF"
-        app:tabSelectedTextColor="#FFFFFF"
-        >
-        
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/nose">
-
-        </com.google.android.material.tabs.TabItem>
+        app:tabSelectedTextColor="#FFFFFF">
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab2"
+            android:id="@+id/tab4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/breast">
-
-        </com.google.android.material.tabs.TabItem>
+            android:text="@string/face" />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab3"
+            android:id="@+id/tab5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/body">
+            android:text="@string/hair" />
 
-        </com.google.android.material.tabs.TabItem>
-
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tab6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/skin" />
 
     </com.google.android.material.tabs.TabLayout>
+
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </FrameLayout>
-    
-    
-    
 
 </LinearLayout>
