--- a/app/src/main/res/layout/fragment_breast_augmentation.xml
+++ b/app/src/main/res/layout/fragment_breast_augmentation.xml
@@ -5,24 +5,22 @@
     android:layout_height="match_parent"
     tools:context=".BreastAugmentationFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/breast_augmentation_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            />
 
-            <TextView
-                android:id="@+id/breast_augmentation_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:textAlignment="center"
-                android:text="@string/breast_fragment_title"
-                android:paddingBottom="16dp" />
-
-
-
-        </LinearLayout>
-
+        <WebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 </FrameLayout>
