--- a/app/src/main/res/layout/fragment_nose_reconstruction.xml
+++ b/app/src/main/res/layout/fragment_nose_reconstruction.xml
@@ -5,12 +5,22 @@
     android:layout_height="match_parent"
     tools:context=".NoseReconstructionFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="24dp"
-        android:textAlignment="center"
-        android:text="@string/nose_fragment_title"
-        />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/nose_reconstruction_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <WebView
+            android:id="@+id/webView2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 </FrameLayout>
