--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/welcome"
+            android:textColor="@color/lila2"
             android:gravity="center"
             android:textSize="24sp"
             android:textStyle="bold"
