--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -5,7 +5,8 @@
     android:id="@+id/drawer_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountActivity">
+    tools:context=".AccountActivity"
+    android:background="@drawable/account_background_3">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,11 +19,13 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Account"
+            android:layout_height="wrap_content"
+            android:textColor="@color/lila2"
+            android:text="@string/my_account"
             android:gravity="center"
-            android:textSize="50sp"
-            android:textStyle="bold"/>
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:padding="16dp"/>
 
     </LinearLayout>
 
