--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,13 +16,12 @@
         <include
             layout="@layout/main_toolbar"/>
 
-        <TextView
+        <fragment
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Maps"
-            android:gravity="center"
-            android:textSize="50sp"
-            android:textStyle="bold"/>
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+             />
 
     </LinearLayout>
 
