--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,21 +10,58 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:orientation="vertical">
 
         <include
             layout="@layout/main_toolbar"/>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!-- App Name -->
+            <TextView
+                android:id="@+id/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ElevateU"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:padding="16dp" />
+
+            <!-- App Icon -->
+            <ImageView
+                android:id="@+id/app_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/bg_search_view" />
+
+            <!-- SearchView -->
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/mapSearch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:queryHint="Search..."
+                android:iconifiedByDefault="false"
+                android:elevation="5dp"
+                android:background="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@id/app_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:padding="8dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <fragment
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-             />
-
+            android:name="com.google.android.gms.maps.SupportMapFragment" />
     </LinearLayout>
-
 
     <RelativeLayout
         android:layout_width="300dp"
@@ -33,12 +70,7 @@
         android:layout_gravity="start">
 
         <include
-            layout="@layout/menu_nawigation_drawer"/>
-
-
+            layout="@layout/menu_nawigation_drawer" />
     </RelativeLayout>
-
-
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
