--- a/app/src/main/res/layout/activity_surgical_procedures_descriptions2.xml
+++ b/app/src/main/res/layout/activity_surgical_procedures_descriptions2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SurgicalProceduresDescriptions">
+    tools:context=".SurgicalProcedures.SurgicalProceduresDescriptions">
     
     
     <com.google.android.material.tabs.TabLayout
