--- a/app/src/main/res/layout/fragment_breast_augmentation.xml
+++ b/app/src/main/res/layout/fragment_breast_augmentation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BreastAugmentationFragment">
+    tools:context=".SurgicalProcedures.BreastAugmentationFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
