--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,93 +1,78 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Message.Message">
-
-    <include
-        android:id="@+id/main_toolbar_withouttoolbar"
-        layout="@layout/main_toolbar_withouttoolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp">
-    </include>
-
-    <ScrollView
-        android:id="@+id/my_scroll_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/main_toolbar_withouttoolbar"
-        android:layout_above="@+id/myLinearLayout">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/message_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:text="Chat with Doctor"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:textAllCaps="false"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:layout_marginStart="3dp"
-                android:layout_marginEnd="3dp"
-                android:layout_marginBottom="45dp"
-                />
-
-
-        </LinearLayout>
-
-
-
-
-
-
-    </ScrollView>
-
+    tools:context=".Message.Message"
+    android:background="@drawable/account_background_3">
 
     <LinearLayout
-        android:id="@+id/myLinearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-
-
-        <EditText
-            android:id="@+id/message_input"
-            android:layout_width="270dp"
+        <include
+            android:id="@+id/main_toolbar_withouttoolbar"
+            layout="@layout/main_toolbar_withouttoolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Please enter your message"
-            android:padding="14dp"/>
-        <ImageButton
-            android:id="@+id/send_button"
-            android:layout_width="30dp"
+            android:layout_marginTop="25dp">
+        </include>
+
+        <TextView
+            android:id="@+id/chat_with_doctor_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/baseline_send_24"
-            android:layout_gravity="center_vertical"/>
-        <ImageButton
-            android:id="@+id/camera_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/baseline_add_a_photo_24"/>
+            android:padding="10dp"
+            android:background="@color/white"
+            android:text="Chat with Doctor"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:textAllCaps="false"
+            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp"
+            android:layout_marginBottom="45dp"/>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/message_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:scrollbars="vertical"
+            mirror="true"/>
 
+        <LinearLayout
+            android:id="@+id/myLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="30dp">
+
+            <EditText
+                android:id="@+id/message_input"
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:hint="Please enter your message"
+                android:padding="14dp"/>
+
+            <ImageButton
+                android:id="@+id/send_button"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/baseline_send_24"
+                android:layout_gravity="center_vertical"/>
+
+            <ImageButton
+                android:id="@+id/camera_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/baseline_add_a_photo_24"/>
+        </LinearLayout>
     </LinearLayout>
-
-
-
-
 </RelativeLayout>
