--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/login_background"
     android:gravity="center"
     android:padding="16dp"
-    tools:context=".SignupActivity">
+    tools:context=".ProfileAndNavigation.SignupActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Sign Up"
+            android:text="@string/sign_up"
             android:textSize="40sp"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -32,8 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:hint="Name"
-            android:textColor="@color/darkred"
+            android:hint="@string/name2"
+            android:textColor="@color/lila2"
             android:textColorHint="@color/black"
             android:textSize="15sp"
             android:background="@drawable/rounded_corner"
@@ -49,8 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Surname"
-            android:textColor="@color/darkred"
+            android:hint="@string/surname"
+            android:textColor="@color/lila2"
             android:textColorHint="@color/black"
             android:textSize="15sp"
             android:background="@drawable/rounded_corner"
@@ -63,8 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Birthday"
-            android:textColor="@color/darkred"
+            android:hint="@string/birthday"
+            android:textColor="@color/lila2"
             android:textColorHint="@color/black"
             android:textSize="15sp"
             android:background="@drawable/rounded_corner"
@@ -79,8 +79,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Email"
-            android:textColor="@color/darkred"
+            android:hint="@string/email3"
+            android:textColor="@color/lila2"
             android:textColorHint="@color/black"
             android:textSize="15sp"
             android:background="@drawable/rounded_corner"
@@ -95,8 +95,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Password"
-            android:textColor="@color/darkred"
+            android:hint="@string/password2"
+            android:textColor="@color/lila2"
             android:textColorHint="@color/black"
             android:textSize="15sp"
             android:background="@drawable/rounded_corner"
@@ -110,8 +110,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:hint="Confirm Password"
-            android:textColor="@color/darkred"
+            android:hint="@string/confirm_password"
+            android:textColor="@color/lila2"
             android:textColorHint="@color/black"
             android:textSize="15sp"
             android:background="@drawable/rounded_corner"
@@ -124,7 +124,7 @@
         <androidx.appcompat.widget.AppCompatButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register"
+            android:text="@string/register"
             android:backgroundTint="@color/black"
             android:textColor="@color/white"
             android:padding="18dp"
@@ -135,7 +135,7 @@
         <TextView
             android:id="@+id/an_account"
             android:layout_marginTop="16dp"
-            android:text="I have an account"
+            android:text="@string/i_have_an_account"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="15sp"
