--- a/app/src/main/res/layout/recyclerview_text_message_sent_item.xml
+++ b/app/src/main/res/layout/recyclerview_text_message_sent_item.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/sent_message_background"
         android:padding="10dp"
-        android:text="Message text"
+        android:text="@string/message_text"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 
