--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutUsActivity"
+    tools:context=".ProfileAndNavigation.AboutUsActivity"
     android:background="@drawable/aboutus_background">
 
     <LinearLayout
