--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,7 +5,7 @@
     android:id="@+id/drawer_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatActivity">
+    tools:context=".ProfileAndNavigation.ChatActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="80dp"
-            android:text="Select a Doctor"
+            android:text="@string/select_a_doctor"
             android:textSize="30sp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
@@ -35,7 +35,7 @@
         <Button
             android:layout_width="150dp"
             android:layout_height="60dp"
-            android:text="Chat"
+            android:text="@string/chat2"
             android:backgroundTint="@color/black"
             android:layout_marginLeft="110dp"
             android:textColor="@color/white"
