--- a/app/src/main/res/layout/activity_loginscreen.xml
+++ b/app/src/main/res/layout/activity_loginscreen.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/login_background"
     android:gravity="center"
     android:padding="16dp"
-    tools:context=".LoginscreenActivity">
+    tools:context=".ProfileAndNavigation.LoginscreenActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
